--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,27 +1,172 @@
-.main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
+
+
+@keyframes move {
+    100% {
+        transform: translate3d(0, 0, 1px) rotate(360deg);
+    }
+}
+
+.background {
+    position: fixed;
+    width: 100%;
+    height: 100%;
     top: 0;
     left: 0;
-    bottom: 0;
-    right: 0;
+    background: #99c1f1;
+    overflow: hidden;
 }
 
-form {
-    display: flex;
-    flex-direction: column;
-    width: 30%;
-
-    a {
-        text-decoration: underline;
-    }
+.background span {
+    width: 15vmin;
+    height: 15vmin;
+    border-radius: 15vmin;
+    backface-visibility: hidden;
+    position: absolute;
+    animation: move;
+    animation-duration: 41;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
 }
 
 
-@media (max-width: 624px) {
-    form {
-        width: 95%;
+.background span:nth-child(0) {
+    color: #E45A84;
+    top: 96%;
+    left: 48%;
+    animation-duration: 72s;
+    animation-delay: -39s;
+    transform-origin: -2vw 1vh;
+    box-shadow: -30vmin 0 3.7570552284647407vmin currentColor;
+}
+.background span:nth-child(1) {
+    color: #FFACAC;
+    top: 44%;
+    left: 87%;
+    animation-duration: 46s;
+    animation-delay: -36s;
+    transform-origin: -2vw -22vh;
+    box-shadow: -30vmin 0 4.338481207875712vmin currentColor;
+}
+.background span:nth-child(2) {
+    color: #583C87;
+    top: 84%;
+    left: 77%;
+    animation-duration: 83s;
+    animation-delay: -26s;
+    transform-origin: -1vw 4vh;
+    box-shadow: 30vmin 0 4.428535849890684vmin currentColor;
+}
+.background span:nth-child(3) {
+    color: #E45A84;
+    top: 10%;
+    left: 21%;
+    animation-duration: 46s;
+    animation-delay: -29s;
+    transform-origin: 5vw 11vh;
+    box-shadow: -30vmin 0 4.510353679980086vmin currentColor;
+}
+.background span:nth-child(4) {
+    color: #E45A84;
+    top: 48%;
+    left: 17%;
+    animation-duration: 29s;
+    animation-delay: -82s;
+    transform-origin: -20vw 17vh;
+    box-shadow: -30vmin 0 4.089079571580701vmin currentColor;
+}
+.background span:nth-child(5) {
+    color: #583C87;
+    top: 64%;
+    left: 93%;
+    animation-duration: 49s;
+    animation-delay: -37s;
+    transform-origin: -7vw 0vh;
+    box-shadow: -30vmin 0 4.625092609014496vmin currentColor;
+}
+.background span:nth-child(6) {
+    color: #583C87;
+    top: 46%;
+    left: 79%;
+    animation-duration: 92s;
+    animation-delay: -8s;
+    transform-origin: -16vw 8vh;
+    box-shadow: 30vmin 0 4.362421039234562vmin currentColor;
+}
+.background span:nth-child(7) {
+    color: #583C87;
+    top: 68%;
+    left: 39%;
+    animation-duration: 42s;
+    animation-delay: -31s;
+    transform-origin: 22vw 8vh;
+    box-shadow: 30vmin 0 4.732702130663695vmin currentColor;
+}
+.background span:nth-child(8) {
+    color: #FFACAC;
+    top: 72%;
+    left: 28%;
+    animation-duration: 84s;
+    animation-delay: -8s;
+    transform-origin: -23vw -13vh;
+    box-shadow: -30vmin 0 4.451566921835508vmin currentColor;
+}
+.background span:nth-child(9) {
+    color: #E45A84;
+    top: 44%;
+    left: 4%;
+    animation-duration: 88s;
+    animation-delay: -7s;
+    transform-origin: 3vw -3vh;
+    box-shadow: 30vmin 0 4.23288975295239vmin currentColor;
+}
+.background span:nth-child(10) {
+    color: #FFACAC;
+    top: 91%;
+    left: 99%;
+    animation-duration: 28s;
+    animation-delay: -27s;
+    transform-origin: -18vw 6vh;
+    box-shadow: 30vmin 0 4.65630903754583vmin currentColor;
+}
+.background span:nth-child(11) {
+    color: #583C87;
+    top: 46%;
+    left: 29%;
+    animation-duration: 92s;
+    animation-delay: -30s;
+    transform-origin: -5vw -6vh;
+    box-shadow: -30vmin 0 3.9976433452914124vmin currentColor;
+}
+.background span:nth-child(12) {
+    color: #E45A84;
+    top: 66%;
+    left: 71%;
+    animation-duration: 76s;
+    animation-delay: -89s;
+    transform-origin: -7vw 10vh;
+    box-shadow: -30vmin 0 4.728941718752734vmin currentColor;
+}
+
+
+mat-card {
+    width: 100%;
+    top: 35vh;
+    position: absolute;
+    padding: 10px 5px 10px 5px;
+    z-index: 0;
+
+    mat-form-field, button {
+        width: 100%;
     }
+
+    mat-card-header {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        img {
+            max-width: 10%;
+        }
+    }
+
 }
