--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,25 +1,3 @@
-.menu {
-    display: grid;
-    gap: 15px;
-    grid-template-columns: repeat(4, 1fr);
-}
-
-.button {
-    background-color: #D1F2F2;
-    padding: 5px;
-    text-align: center;
-}
-
-@media screen and (max-width: 1024px) {
-    .menu {
-        padding: 15px;
-        grid-template-columns: repeat(3, 1fr);
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .menu {
-        padding: 5px;
-        grid-template-columns: 1fr;
-    }
+button {
+    width: 100%;
 }
