--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -5,20 +5,20 @@
     <input matInput (keyup)="applyFilter($event)" placeholder="Pepe Lopez." #input>
 </mat-form-field>
 
-<button color="primary" routerLink="/profile/new" mat-button *ngIf="logged.role.manageUsers">
-    Nuevo usuario
+<button routerLink="/profile/new" mat-icon-button *ngIf="logged.role.manageUsers" matTooltip="Nuevo usuario">
+    <mat-icon>add</mat-icon>
 </button>
 
 <table mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="No.">
-        <th mat-header-cell *matHeaderCellDef></th>
+        <th mat-header-cell *matHeaderCellDef>Nombre</th>
         <td mat-cell *matCellDef="let element">
             {{element.name}}
         </td>
     </ng-container>
 
     <ng-container matColumnDef="Nombre">
-        <th mat-header-cell *matHeaderCellDef></th>
+        <th mat-header-cell *matHeaderCellDef>Perfil</th>
         <td mat-cell *matCellDef="let element">
             <button mat-raised-button color="accent" [routerLink]="'/profile/' + element._id">
                 Ver perfil
